--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,12 @@
     <string name="y_edittext_hint">Y</string>
     <string name="add_btn_str">AJOUTER</string>
     <string name="point_origine_tv_str">Point Origine</string>
-    <string name="empty_field_error">Veuillez Saisir Nom &amp; Coordonnées</string>
+    <string name="add_point_error">Veuillez Saisir Nom &amp; Coordonnées</string>
     <string name="gst_label_tv_str">Go</string>
     <string name="dce_label_tv_str">Do</string>
     <string name="objectif_tv_label">Objectif</string>
     <string name="point_cible_tv_str">Point Cible</string>
     <string name="list_title">Carnet des Points</string>
     <string name="convert_btn_str">Calculer</string>
+    <string name="polar_coord_error">Veuillez saisir Go/Do valides</string>
 </resources>
